<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_weather_info">


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:paddingTop="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_weather"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/weather_condition_icon"
                android:padding="5dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/lbl_locaton" />

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtWeatherCond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/icon_temp"
                    custom:srcCompat="@drawable/icon_temp" />

                <TextView
                    android:id="@+id/txtTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/icon_wind"
                    custom:srcCompat="@drawable/icon_wind" />

                <TextView
                    android:id="@+id/txtSpeedWind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/icon_pressure"
                    custom:srcCompat="@drawable/icon_pressure" />

                <TextView
                    android:id="@+id/txtPresure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/icon_humidity"
                    custom:srcCompat="@drawable/icon_humidity" />

                <TextView
                    android:id="@+id/txtHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
